# camwire-plus-plus

./: CMakeLists.txt  COPYING  INSTALL  README.md
cmake/Modules/: FindDC1394.cmake
include/: Camera.h  CameraBus.h  CameraConfig.h  CameraConfig.h.in  CameraData.h  CameraHandle.h  CameraMacros.h  camwire.hpp  camwire_config.hpp  camwire_config.hpp.in  camwire_handle.hpp  camwire_macros.hpp  camwirebus.hpp
src/: Camera.cpp  CameraBus.cpp  camwire.cpp  camwirebus.cpp
test/: hello.cpp  hello_cv.cpp  hello_cv2.cpp
